# RP2040-I2C-USB-Adaptor

./: CMakeLists.txt  README.md  pico_i2c_adaptor_user1.c  pico_i2c_adaptor_user1.elf  pico_i2c_adaptor_user1.elf.map  pico_i2c_adaptor_user1.hex  pico_i2c_adaptor_user1.uf2
Protocol/: protocol.md
pc_test_software/: CMakeLists.txt  readme.md
pc_test_software/include/: RPI2C.h
pc_test_software/src/: main.cpp
